--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "server": "webpack-dev-server --open",
+    "dev": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "vue": "^2.4.4"
+    "element-ui": "^1.4.6",
+    "vue": "^2.4.4",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -20,8 +22,13 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.3",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "postcss-loader": "^2.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
