--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "node src/read-pages.js | webpack",
     "dev": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +26,8 @@
     "file-loader": "^1.1.3",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
+    "marked": "^0.3.6",
     "postcss-loader": "^2.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
