--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -13,8 +13,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
-root: /
+url: https://alwxkxk.github.io/scaugreen/
+root: /scaugreen/
 permalink: posts/:abbrlink/
 permalink_defaults:
 
@@ -78,7 +78,9 @@ theme: maupassant
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git 
+  repo: git@github.com:alwxkxk/scaugreen.git
+  branch: gh-pages
 
 # abbrlink config
 abbrlink:
