修复关于跳转成http所导致的无法访问的问题

--- a/hexo/themes/maupassant/_config.yml
+++ b/hexo/themes/maupassant/_config.yml
@@ -68,7 +68,7 @@ menu:
     directory: archives/
     icon: fa-archive
   - page: about
-    directory: posts/3b4b656d
+    directory: posts/3b4b656d/
     icon: fa-user
 
 widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts, rencent_comments and links.
